# instanttrafficai

./: .replit  pyproject.toml
Instant Traffic AI/: .replit  app.py  cache_helper.py  fix_fstrings.py  fix_quotes.py  gemini_helper.py  groq_helper.py  pyproject.toml  quick_test.py  replit.md  template_generator.py  template_generator.py.backup  test_features.py  web_scraper.py
Instant Traffic AI/attached_assets/: INSTANT_TRAFFIC_AI_SALES_COPY_FINAL_3_1763349667983.txt  Instant traffic ai_1763348785795.docx
Instant Traffic AI/cache/: find_real_traffic_leaks_Fitness_None.json  generate_campaign_Fitness_Facebook.json  generate_campaign_finance_all.json  generate_campaign_trading_Facebook.json  generate_campaign_trading_all.json
Instant Traffic AI/instance/: traffic_ai.db
Instant Traffic AI/static/: script.js  style.css
Instant Traffic AI/templates/: dashboard.html  login.html
