[project]
name = "instant-traffic-ai"
version = "0.1.0"
description = "Instant Traffic AI - Marketing Campaign Generator"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "google-genai>=1.0.0",
    "groq>=0.34.1",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "sift-stack-py>=0.9.1",
    "werkzeug>=3.1.3",
]
